--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriesupdatedata.yml
@@ -55,7 +55,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#filtered:member'
     summary: |-
-      该布尔值表示是否筛选系列。 不适用于曲面图。
+      指定是否筛选系列。 不适用于曲面图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
@@ -100,7 +100,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#hasDataLabels:member'
     summary: |-
-      该布尔值表示系列是否具有数据标签。
+      指定该系列是否具有数据标签。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
@@ -115,7 +115,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerBackgroundColor:member'
     summary: |-
-      表示图表系列的标记背景色。
+      指定图表系列的标记背景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
@@ -130,7 +130,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerForegroundColor:member'
     summary: |-
-      表示图表系列的标记前景色。
+      指定图表系列的标记前景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
@@ -145,7 +145,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerSize:member'
     summary: |-
-      表示图表系列的标记大小。
+      指定图表系列的标记大小。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
@@ -160,7 +160,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerStyle:member'
     summary: |-
-      表示图表系列的标记类型。 有关详细信息，请参阅 ChartMarkerStyle。
+      指定图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
@@ -175,7 +175,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#name:member'
     summary: |-
-      表示图表中某个系列的名称。
+      指定图表中系列的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -190,7 +190,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#plotOrder:member'
     summary: |-
-      表示图表组中某个图表系列的绘制顺序。
+      指定图表系列在图表组中的绘制顺序。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
@@ -205,7 +205,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#showShadow:member'
     summary: |-
-      表示系列是否具有阴影的布尔值。
+      指定系列是否具有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -220,7 +220,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#smooth:member'
     summary: |-
-      该布尔值表示系列是否平滑。 仅适用于折线图和散点图。
+      指定系列是否平滑。 仅适用于折线图和散点图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
