--- a/docs/docs-ref-autogen/excel_online/excel/excel.chartpointformat.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.chartpointformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartPointFormat#border:member'
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.ChartPointFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartPointFormat#border:member'
     summary: |-
-      表示图表数据点的边框格式，包括颜色、样式和权重信息。 只读。
+      表示图表数据点的边框格式，包括颜色、样式和权重信息。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
@@ -52,7 +52,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPointFormat#fill:member'
     summary: |-
-      代表图表的填充格式，其中包括背景格式信息。 只读。
+      代表图表的填充格式，其中包括背景格式信息。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -152,7 +152,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartPointFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -185,7 +185,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPointFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -199,7 +199,7 @@ references:
     name: Excel.Interfaces.ChartPointFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
     name: Interfaces.ChartPointFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartPointFormatData:interface'
     name: Excel.Interfaces.ChartPointFormatData
