--- a/docs/docs-ref-autogen/excel_online/excel/excel.pivotfield.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.pivotfield.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.PivotField#context:member'
@@ -173,7 +173,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.PivotField#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -225,7 +225,7 @@ items:
         description: ''
       parameters:
         - id: sortBy
-          description: 表示按升序还是降序进行排序。
+          description: 指定是按升序还是降序进行排序。
           type:
             - 'excel!Excel.SortBy:enum'
   - uid: 'excel!Excel.PivotField#sortByValues:member(1)'
@@ -246,7 +246,7 @@ items:
         description: ''
       parameters:
         - id: sortBy
-          description: 表示按升序还是降序进行排序。
+          description: 指定是按升序还是降序进行排序。
           type:
             - 'excel!Excel.SortBy:enum'
         - id: valuesHierarchy
@@ -275,7 +275,7 @@ items:
         description: ''
       parameters:
         - id: sortByString
-          description: 表示按升序还是降序进行排序。
+          description: 指定是按升序还是降序进行排序。
           type:
             - '"Ascending" | "Descending"'
         - id: valuesHierarchy
@@ -315,7 +315,7 @@ items:
           - 'excel!Excel.Interfaces.PivotFieldData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -327,7 +327,7 @@ references:
     name: Excel.Interfaces.PivotFieldLoadOptions
   - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData:interface'
     name: Interfaces.PivotFieldUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.SortBy:enum'
     name: SortBy
