--- a/docs/docs-ref-autogen/onenote/onenote/onenote.table.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.table.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.Table#appendColumn:member(1)'
@@ -606,7 +606,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'onenote!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'onenote!OneNote.Table#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -686,7 +686,7 @@ items:
           - 'onenote!OneNote.Table:class'
         description: ''
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.TableRow:class'
     name: OneNote.TableRow
@@ -704,7 +704,7 @@ references:
     name: OneNote.TableRowCollection
   - uid: 'onenote!OneNote.Interfaces.TableUpdateData:interface'
     name: Interfaces.TableUpdateData
-  - uid: 'onenote!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'onenote!OneNote.Interfaces.TableData:interface'
     name: OneNote.Interfaces.TableData
