commit translated contents

--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.binding.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.binding.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Binding#context:member'
@@ -145,7 +145,7 @@ items:
           ```
   - uid: 'excel!Excel.Binding#id:member'
     summary: |-
-      表示绑定标识符。 只读。
+      表示绑定标识符。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -303,7 +303,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Binding#type:member'
     summary: |-
-      返回绑定的类型。 有关详细信息，请参阅 BindingType。 只读。
+      返回绑定的类型。 有关详细信息，请参阅 BindingType。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -317,7 +317,7 @@ items:
         type:
           - 'excel!Excel.Binding#type~0:complex'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -329,7 +329,7 @@ references:
     name: OfficeExtension.ClientResult<string>
     fullName: OfficeExtension.ClientResult<string>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <string>
@@ -342,7 +342,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.BindingDataChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.BindingDataChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -356,7 +356,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.BindingSelectionChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.BindingSelectionChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
