--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriesdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartseriesdata.yml
@@ -57,7 +57,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#filtered:member'
     summary: |-
-      该布尔值表示是否筛选系列。 不适用于曲面图。
+      指定是否筛选系列。 不适用于曲面图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
@@ -72,7 +72,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#format:member'
     summary: |-
-      表示图表系列的格式，包括填充和线条格式。 只读。
+      表示图表系列的格式，包括填充和线条格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -102,7 +102,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#hasDataLabels:member'
     summary: |-
-      该布尔值表示系列是否具有数据标签。
+      指定该系列是否具有数据标签。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
@@ -117,7 +117,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#markerBackgroundColor:member'
     summary: |-
-      表示图表系列的标记背景色。
+      指定图表系列的标记背景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
@@ -132,7 +132,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#markerForegroundColor:member'
     summary: |-
-      表示图表系列的标记前景色。
+      指定图表系列的标记前景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
@@ -147,7 +147,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#markerSize:member'
     summary: |-
-      表示图表系列的标记大小。
+      指定图表系列的标记大小。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
@@ -162,7 +162,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#markerStyle:member'
     summary: |-
-      表示图表系列的标记类型。 有关详细信息，请参阅 ChartMarkerStyle。
+      指定图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
@@ -177,7 +177,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesData#markerStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#name:member'
     summary: |-
-      表示图表中某个系列的名称。
+      指定图表中系列的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -192,7 +192,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#plotOrder:member'
     summary: |-
-      表示图表组中某个图表系列的绘制顺序。
+      指定图表系列在图表组中的绘制顺序。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
@@ -207,7 +207,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#points:member'
     summary: |-
-      表示系列中所有数据点的集合。 只读。
+      返回系列中所有数据点的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: points
@@ -222,7 +222,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesData#points~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#showShadow:member'
     summary: |-
-      表示系列是否具有阴影的布尔值。
+      指定系列是否具有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -237,7 +237,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#smooth:member'
     summary: |-
-      该布尔值表示系列是否平滑。 仅适用于折线图和散点图。
+      指定系列是否平滑。 仅适用于折线图和散点图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
@@ -252,7 +252,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesData#trendlines:member'
     summary: |-
-      表示系列中趋势线的集合。 只读。
+      系列中趋势线的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: trendlines
