--- a/docs/docs-ref-autogen/onenote/onenote/onenote.paragraph.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.paragraph.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.Paragraph#addNoteTag:member(1)'
@@ -835,7 +835,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'onenote!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'onenote!OneNote.Paragraph#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -924,7 +924,7 @@ items:
           - 'onenote!OneNote.Paragraph:class'
         description: ''
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.NoteTag:class'
     name: OneNote.NoteTag
@@ -938,7 +938,7 @@ references:
     name: OfficeExtension.ClientResult<OneNote.ParagraphInfo>
     fullName: OfficeExtension.ClientResult<OneNote.ParagraphInfo>
     spec.typeScript:
-      - uid: 'onenote!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <
@@ -970,7 +970,7 @@ references:
     name: OneNote.TableCell
   - uid: 'onenote!OneNote.Interfaces.ParagraphUpdateData:interface'
     name: Interfaces.ParagraphUpdateData
-  - uid: 'onenote!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'onenote!OneNote.Interfaces.ParagraphData:interface'
     name: OneNote.Interfaces.ParagraphData
