--- a/docs/docs-ref-autogen/excel/excel/excel.workbook.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.workbook.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Workbook#application:member'
@@ -53,6 +53,7 @@ items:
       - 'excel!Excel.Workbook#set:member(1)'
       - 'excel!Excel.Workbook#set:member(2)'
       - 'excel!Excel.Workbook#settings:member'
+      - 'excel!Excel.Workbook#showPivotFieldList:member'
       - 'excel!Excel.Workbook#slicers:member'
       - 'excel!Excel.Workbook#slicerStyles:member'
       - 'excel!Excel.Workbook#styles:member'
@@ -65,7 +66,7 @@ items:
       - 'excel!Excel.Workbook#worksheets:member'
   - uid: 'excel!Excel.Workbook#application:member'
     summary: |-
-      表示包含此工作簿的 Excel 应用程序实例。 只读。
+      表示包含此工作簿的 Excel 应用程序实例。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: application
@@ -80,7 +81,7 @@ items:
           - 'excel!Excel.Application:class'
   - uid: 'excel!Excel.Workbook#autoSave:member'
     summary: |-
-      指定工作簿是否处于自动保存模式。 只读。
+      指定工作簿是否处于自动保存模式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoSave
@@ -95,7 +96,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Workbook#bindings:member'
     summary: |-
-      表示属于工作簿的绑定的集合。 只读。
+      表示属于工作簿的绑定的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
@@ -110,7 +111,7 @@ items:
           - 'excel!Excel.BindingCollection:class'
   - uid: 'excel!Excel.Workbook#calculationEngineVersion:member'
     summary: |-
-      返回有关 Excel 计算引擎的版本号。 只读。
+      返回有关 Excel 计算引擎的版本号。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationEngineVersion
@@ -142,8 +143,7 @@ items:
     summary: |-
       关闭当前工作簿。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: close(closeBehavior)
     fullName: close(closeBehavior)
     langs:
@@ -160,7 +160,7 @@ items:
           #### <a name="examples"></a>示例
 
           ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/workbook-save-and-close.yaml
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/50-workbook/workbook-save-and-close.yaml
           await Excel.run(async (context) => {
               context.workbook.close(Excel.CloseBehavior.save);
           });
@@ -174,7 +174,7 @@ items:
     summary: |-
       关闭当前工作簿。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: close(closeBehaviorString)
     fullName: close(closeBehaviorString)
     langs:
@@ -193,7 +193,7 @@ items:
             - '"Save" | "SkipSave"'
   - uid: 'excel!Excel.Workbook#comments:member'
     summary: |-
-      表示与工作簿关联的批注集合。 只读。
+      表示与工作簿关联的批注集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comments
@@ -220,7 +220,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.Workbook#customXmlParts:member'
     summary: |-
-      表示此工作簿包含的自定义 XML 部件的集合。 只读。
+      表示此工作簿包含的自定义 XML 部件的集合。
 
       \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customXmlParts
@@ -235,7 +235,7 @@ items:
           - 'excel!Excel.CustomXmlPartCollection:class'
   - uid: 'excel!Excel.Workbook#dataConnections:member'
     summary: |-
-      表示工作簿中的所有数据连接。 只读。
+      表示工作簿中的所有数据连接。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataConnections
@@ -250,7 +250,7 @@ items:
           - 'excel!Excel.DataConnectionCollection:class'
   - uid: 'excel!Excel.Workbook#functions:member'
     summary: |-
-      代表可用于计算的工作表函数的集合。 只读。
+      代表可用于计算的工作表函数的集合。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: functions
@@ -442,7 +442,7 @@ items:
           ```
   - uid: 'excel!Excel.Workbook#isDirty:member'
     summary: |-
-      指定自上次保存以来是否对指定的工作簿进行任何更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
+      指定自上次保存工作簿后是否进行了更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isDirty
@@ -519,7 +519,7 @@ items:
                       }
   - uid: 'excel!Excel.Workbook#name:member'
     summary: |-
-      获取工作簿名称。 只读。
+      获取工作簿名称。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -534,7 +534,7 @@ items:
           - string
   - uid: 'excel!Excel.Workbook#names:member'
     summary: |-
-      表示工作簿范围内的已命名项目（称为区域和常量）的集合。 只读。
+      表示工作簿范围内的已命名项目（称为区域和常量）的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -579,7 +579,7 @@ items:
           - 'excel!Excel.Workbook#onSelectionChanged~0:complex'
   - uid: 'excel!Excel.Workbook#pivotTables:member'
     summary: |-
-      表示一组与 workbook 相关联的 PivotTable 对象。 只读。
+      表示一组与 workbook 相关联的 PivotTable 对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -594,7 +594,7 @@ items:
           - 'excel!Excel.PivotTableCollection:class'
   - uid: 'excel!Excel.Workbook#pivotTableStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 PivotTableStyles。 只读。
+      表示一组与工作簿相关联的 PivotTableStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTableStyles
@@ -609,7 +609,7 @@ items:
           - 'excel!Excel.PivotTableStyleCollection:class'
   - uid: 'excel!Excel.Workbook#previouslySaved:member'
     summary: |-
-      指定工作簿是否已在本地或在线保存。 只读。
+      指定是否曾在本地或联机保存工作簿。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: previouslySaved
@@ -624,7 +624,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Workbook#properties:member'
     summary: |-
-      获取工作簿属性。 只读。
+      获取工作簿属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: properties
@@ -671,7 +671,7 @@ items:
           ```
   - uid: 'excel!Excel.Workbook#protection:member'
     summary: |-
-      返回工作簿的工作簿保护对象。 只读。
+      返回工作簿的工作簿保护对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -686,7 +686,7 @@ items:
           - 'excel!Excel.WorkbookProtection:class'
   - uid: 'excel!Excel.Workbook#readOnly:member'
     summary: |-
-      如果在只读模式下打开工作簿，则为 True。 只读。
+      如果在只读模式下打开工作簿，则为 True。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
@@ -703,8 +703,7 @@ items:
     summary: |-
       保存当前工作簿。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: save(saveBehavior)
     fullName: save(saveBehavior)
     langs:
@@ -721,7 +720,7 @@ items:
           #### <a name="examples"></a>示例
 
           ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/85-preview-apis/workbook-save-and-close.yaml
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/50-workbook/workbook-save-and-close.yaml
           await Excel.run(async (context) => {
               context.workbook.save(Excel.SaveBehavior.save);
           });
@@ -735,7 +734,7 @@ items:
     summary: |-
       保存当前工作簿。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: save(saveBehaviorString)
     fullName: save(saveBehaviorString)
     langs:
@@ -777,7 +776,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Workbook#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -798,7 +797,7 @@ items:
             - 'excel!Excel.Workbook:class'
   - uid: 'excel!Excel.Workbook#settings:member'
     summary: |-
-      表示一组与 workbook 相关联的 setting 对象。 只读。
+      表示一组与 workbook 相关联的 setting 对象。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
@@ -811,9 +810,25 @@ items:
       return:
         type:
           - 'excel!Excel.SettingCollection:class'
+  - uid: 'excel!Excel.Workbook#showPivotFieldList:member'
+    summary: |-
+      指定是否在工作簿级别显示数据透视表的 "字段列表" 窗格。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: showPivotFieldList
+    fullName: showPivotFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showPivotFieldList: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Workbook#slicers:member'
     summary: |-
-      表示与工作簿关联的切片器集合。 只读。
+      表示与工作簿关联的切片器集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicers
@@ -828,7 +843,7 @@ items:
           - 'excel!Excel.SlicerCollection:class'
   - uid: 'excel!Excel.Workbook#slicerStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 SlicerStyles。 只读。
+      表示一组与工作簿相关联的 SlicerStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicerStyles
@@ -843,7 +858,7 @@ items:
           - 'excel!Excel.SlicerStyleCollection:class'
   - uid: 'excel!Excel.Workbook#styles:member'
     summary: |-
-      表示与工作簿关联的样式的集合。 只读。
+      表示与工作簿关联的样式的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: styles
@@ -886,7 +901,7 @@ items:
           ```
   - uid: 'excel!Excel.Workbook#tables:member'
     summary: |-
-      表示与工作簿关联的表的集合。 只读。
+      表示与工作簿关联的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
@@ -901,7 +916,7 @@ items:
           - 'excel!Excel.TableCollection:class'
   - uid: 'excel!Excel.Workbook#tableStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 TableStyles。 只读。
+      表示一组与工作簿相关联的 TableStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tableStyles
@@ -916,7 +931,7 @@ items:
           - 'excel!Excel.TableStyleCollection:class'
   - uid: 'excel!Excel.Workbook#timelineStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 TimelineStyles。 只读。
+      表示一组与工作簿相关联的 TimelineStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: timelineStyles
@@ -975,7 +990,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Workbook#worksheets:member'
     summary: |-
-      表示与工作簿关联的工作表的集合。 只读。
+      表示与工作簿关联的工作表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheets
@@ -989,7 +1004,7 @@ items:
         type:
           - 'excel!Excel.WorksheetCollection:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Application:class'
     name: Excel.Application
@@ -1017,7 +1032,7 @@ references:
     name: OfficeExtension.ClientResult<boolean>
     fullName: OfficeExtension.ClientResult<boolean>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <boolean>
@@ -1034,7 +1049,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorkbookAutoSaveSettingChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorkbookAutoSaveSettingChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1048,7 +1063,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -1070,7 +1085,7 @@ references:
     name: Excel.SaveBehavior
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData:interface'
     name: Interfaces.WorkbookUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.SettingCollection:class'
     name: Excel.SettingCollection
