--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.nameditemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.nameditemcollectionloadoptions.yml
@@ -35,7 +35,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#comment:member'
     summary: |-
-      对于集合中的每一项：代表与此名称关联的注释。
+      对于集合中的每一项：指定与此名称关联的注释。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
@@ -50,7 +50,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#name:member'
     summary: |-
-      对于集合中的每一项：对象的名称。 只读。
+      对于集合中的每一项：对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -65,7 +65,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#scope:member'
     summary: |-
-      对于集合中的每一项：指示名称是限定在工作簿中还是特定工作表。 可能的值为：工作表、工作簿。 只读。
+      对于集合中的每一项：指定名称是限定在工作簿中还是指定的工作表。 可能的值为：工作表、工作簿。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
@@ -80,7 +80,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#type:member'
     summary: |-
-      对于集合中的每一项：指示由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。 只读。
+      对于集合中的每一项：指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
       \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -95,7 +95,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#value:member'
     summary: |-
-      对于集合中的每一项：代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。 只读。
+      对于集合中的每一项：代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
@@ -110,7 +110,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#visible:member'
     summary: |-
-      对于集合中的每一项：指定对象是否可见。
+      对于集合中的每一项：指定该对象是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
