--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.worksheetupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.worksheetupdatedata.yml
@@ -48,7 +48,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#showGridlines:member'
     summary: |-
-      获取或设置工作表的网格线标志。 此标志确定是否对用户显示网格线。
+      指定是否对用户显示网格线。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showGridlines
@@ -63,7 +63,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#showHeadings:member'
     summary: |-
-      获取或设置工作表的标题标志。 此标志确定是否对用户显示标题。
+      指定标题是否对用户可见。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showHeadings
@@ -78,7 +78,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#standardWidth:member'
     summary: |-
-      返回或设置工作表中所有列的标准（默认）列宽。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
+      指定工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardWidth
@@ -93,7 +93,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.WorksheetUpdateData#tabColor:member'
     summary: |-
-      获取或设置工作表标签颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
+      工作表的选项卡颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tabColor
