--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartpointformatdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartpointformatdata.yml
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.Interfaces.ChartPointFormatData#border:member'
   - uid: 'excel!Excel.Interfaces.ChartPointFormatData#border:member'
     summary: |-
-      表示图表数据点的边框格式，包括颜色、样式和权重信息。 只读。
+      表示图表数据点的边框格式，包括颜色、样式和权重信息。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
