--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartseriesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartseriesupdatedata.yml
@@ -55,7 +55,7 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesUpdateData#yErrorBars:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#axisGroup:member'
     summary: |-
-      返回或设置指定系列的组。 读/写
+      指定指定系列的组。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisGroup
@@ -100,7 +100,7 @@ items:
           - 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#bubbleScale:member'
     summary: |-
-      这可以是从 0（零）到 300 的整数值，表示默认大小的百分比。 该属性仅适用于气泡图。 读/写。
+      这可以是从 0（零）到 300 的整数值，表示默认大小的百分比。 该属性仅适用于气泡图。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bubbleScale
@@ -160,7 +160,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#explosion:member'
     summary: |-
-      返回或设置饼图或圆环图切片的分解程度值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。 读/写。
+      指定饼图或圆环图切片的爆炸值。 如果未分解（切片尖端位于饼图中心），则返回 0（零）。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: explosion
@@ -175,7 +175,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#filtered:member'
     summary: |-
-      该布尔值表示是否筛选系列。 不适用于曲面图。
+      指定是否筛选系列。 不适用于曲面图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filtered
@@ -190,7 +190,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#firstSliceAngle:member'
     summary: |-
-      返回或设置第一个饼图或圆环图切片的角度，以度为单位（从垂直方向起为顺时针）。 只适用于饼图、三维饼图和圆环图。 可以是 0 到 360 之间的值。 读/写
+      指定第一个饼图或圆环图的扇区的角度（以度为单位（从垂直方向顺时针方向）。 只适用于饼图、三维饼图和圆环图。 可以是0到360之间的值。指定负 DataBar 的填充颜色是否与正 DataBar 相同。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: firstSliceAngle
@@ -235,7 +235,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMaximumColor:member'
     summary: |-
-      返回或设置区域地图图表系列的最大值的颜色。 读/写。
+      指定区域地图图表系列的最大值的颜色。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMaximumColor
@@ -250,7 +250,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMaximumType:member'
     summary: |-
-      返回或设置区域地图图表系列的最大值的类型。 读/写。
+      指定区域地图图表系列的最大值的类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMaximumType
@@ -265,7 +265,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMaximumType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMaximumValue:member'
     summary: |-
-      返回或设置区域地图图表系列的最大值。 读/写。
+      指定区域地图图表系列的最大值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMaximumValue
@@ -280,7 +280,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMidpointColor:member'
     summary: |-
-      返回或设置区域地图图表系列的中间值的颜色。 读/写。
+      指定区域地图图表系列的中点值的颜色。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMidpointColor
@@ -295,7 +295,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMidpointType:member'
     summary: |-
-      返回或设置区域地图图表系列的中间值的类型。 读/写。
+      指定区域地图图表系列的中点值的类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMidpointType
@@ -310,7 +310,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMidpointType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMidpointValue:member'
     summary: |-
-      返回或设置区域地图图表系列的中间值。 读/写。
+      指定区域地图图表系列的中点值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMidpointValue
@@ -325,7 +325,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMinimumColor:member'
     summary: |-
-      返回或设置区域地图图表系列的最小值的颜色。 读/写。
+      指定区域地图图表系列的最小值的颜色。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMinimumColor
@@ -340,7 +340,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMinimumType:member'
     summary: |-
-      返回或设置区域地图图表系列的最小值的类型。 读/写。
+      指定区域地图图表系列的最小值的类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMinimumType
@@ -355,7 +355,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMinimumType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientMinimumValue:member'
     summary: |-
-      返回或设置区域地图图表系列的最小值。 读/写。
+      指定区域地图图表系列的最小值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientMinimumValue
@@ -370,7 +370,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientStyle:member'
     summary: |-
-      返回或设置区域地图图表的系列渐变样式。 读/写。
+      指定区域地图图表的系列渐变样式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: gradientStyle
@@ -385,7 +385,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#gradientStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#hasDataLabels:member'
     summary: |-
-      该布尔值表示系列是否具有数据标签。
+      指定该系列是否具有数据标签。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabels
@@ -400,7 +400,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#invertColor:member'
     summary: |-
-      返回或设置系列中负数据点的填充颜色。 读/写。
+      指定系列中的负数据点的填充颜色。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: invertColor
@@ -415,7 +415,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#invertIfNegative:member'
     summary: |-
-      如果 Excel 在值为负数时反转项目中的图案，则为 True。 读/写。
+      如此如果当 Excel 中的模式与一个负数相对应时反转该模式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: invertIfNegative
@@ -445,7 +445,7 @@ items:
           - 'excel!Excel.Interfaces.ChartMapOptionsUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerBackgroundColor:member'
     summary: |-
-      表示图表系列的标记背景色。
+      指定图表系列的标记背景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
@@ -460,7 +460,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerForegroundColor:member'
     summary: |-
-      表示图表系列的标记前景色。
+      指定图表系列的标记前景色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
@@ -475,7 +475,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerSize:member'
     summary: |-
-      表示图表系列的标记大小。
+      指定图表系列的标记大小。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
@@ -490,7 +490,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerStyle:member'
     summary: |-
-      表示图表系列的标记类型。 有关详细信息，请参阅 ChartMarkerStyle。
+      指定图表系列的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
@@ -505,7 +505,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#markerStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#name:member'
     summary: |-
-      表示图表中某个系列的名称。
+      指定图表中系列的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -520,7 +520,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#overlap:member'
     summary: |-
-      指定条柱的摆放方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。 读/写。
+      指定条柱的摆放方式。 可以是–100到100之间的值。 只适用于二维条形图和二维柱形图。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlap
@@ -535,7 +535,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#parentLabelStrategy:member'
     summary: |-
-      返回或设置树状图的系列父标签策略区域。 读/写。
+      指定树状图图表的系列父标签策略区域。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: parentLabelStrategy
@@ -550,7 +550,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#parentLabelStrategy~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#plotOrder:member'
     summary: |-
-      表示图表组中某个图表系列的绘制顺序。
+      指定图表系列在图表组中的绘制顺序。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotOrder
@@ -565,7 +565,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#secondPlotSize:member'
     summary: |-
-      返回或设置复合饼图或复合条饼图的辅助分区的大小，以占主饼图大小的百分比表示。 可以是 5 到 200 之间的值。 读/写。
+      指定复合饼图或复合条饼图中的第二部分的大小（以主饼图大小的百分比表示）。 可以是 5 到 200 之间的值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: secondPlotSize
@@ -580,7 +580,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#showConnectorLines:member'
     summary: |-
-      指定是否在瀑布图中显示连接线。 读/写。
+      指定是否在瀑布图中显示连接符线。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showConnectorLines
@@ -595,7 +595,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#showLeaderLines:member'
     summary: |-
-      指定是否在系列中显示每个数据标签的引导线。 读/写。
+      指定是否为系列中的每个数据标签显示引导线。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLeaderLines
@@ -610,7 +610,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#showShadow:member'
     summary: |-
-      表示系列是否具有阴影的布尔值。
+      指定系列是否具有阴影。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
@@ -625,7 +625,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#smooth:member'
     summary: |-
-      该布尔值表示系列是否平滑。 仅适用于折线图和散点图。
+      指定系列是否平滑。 仅适用于折线图和散点图。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: smooth
@@ -640,7 +640,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#splitType:member'
     summary: |-
-      返回或设置复合饼图或复合条饼图中两个分区的拆分方式。 读/写。
+      指定拆分复合饼图或复合条饼图条形图的两个部分的方式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: splitType
@@ -655,7 +655,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesUpdateData#splitType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#splitValue:member'
     summary: |-
-      返回或设置复合饼图或复合条饼图中分隔两部分的阈值。 读/写。
+      指定用于分隔复合饼图或复合条饼图中的两个节的临界值。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: splitValue
@@ -670,7 +670,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#varyByCategories:member'
     summary: |-
-      如果 Excel 为每个数据标记分配不同的颜色或图案，则为 True。 图表必须只包含一个系列。 读/写。
+      如此如果 Excel 为每个数据标记分配不同的颜色或图案。 图表必须只包含一个系列。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: varyByCategories
