--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionaldatabarnegativeformatupdatedata.yml
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveFillColor:member'
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#borderColor:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。 如果不存在或设置了边框，则为 "空字符串"。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。 如果不存在或设置了边框，则为 "空字符串"。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borderColor
@@ -30,7 +30,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#fillColor:member'
     summary: |-
-      代表\#RRGGBB 的填充颜色的 HTML 颜色代码（例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
+      代表表单\#RRGGBB 的填充颜色的 HTML 颜色代码（例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fillColor
@@ -45,7 +45,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveBorderColor:member'
     summary: |-
-      该布尔值表示负 DataBar 是否与正 DataBar 具有相同边框颜色。
+      指定负 DataBar 的边框颜色是否与正 DataBar 相同。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveBorderColor
@@ -60,7 +60,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData#matchPositiveFillColor:member'
     summary: |-
-      该布尔值表示负 DataBar 是否与正 DataBar 具有相同填充颜色。
+      指定负 DataBar 的填充颜色是否与正 DataBar 相同。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchPositiveFillColor
