--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.rangefontloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.rangefontloadoptions.yml
@@ -52,7 +52,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#color:member'
     summary: |-
-      文本颜色的 HTML 颜色代码表示。 例如， \#FF0000 表示红色。
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -67,7 +67,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#italic:member'
     summary: |-
-      表示字体的斜体状态。
+      指定字体的斜体状态。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
@@ -82,7 +82,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#name:member'
     summary: |-
-      字体名称（例如"Calibri"）
+      字体名称（例如，"Calibri"）
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -112,7 +112,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#strikethrough:member'
     summary: |-
-      表示字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
+      指定字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: strikethrough
@@ -127,7 +127,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#subscript:member'
     summary: |-
-      表示字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
+      指定字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subscript
@@ -142,7 +142,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#superscript:member'
     summary: |-
-      表示字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
+      指定字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: superscript
@@ -157,7 +157,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontLoadOptions#tintAndShade:member'
     summary: |-
-      返回或设置一个使区域字体的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 空值表示整个区域没有统一的字体 tintAndShade 设置。
+      指定将区域字体的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示整个区域没有统一的字体 tintAndShade 设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
