--- a/docs/docs-ref-autogen/visio/visio/visio.documentview.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.documentview.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.DocumentView#context:member'
@@ -217,7 +217,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'visio!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'visio!Visio.DocumentView#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -250,7 +250,7 @@ items:
           - 'visio!Visio.Interfaces.DocumentViewData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
@@ -260,7 +260,7 @@ references:
     name: Visio.Interfaces.DocumentViewLoadOptions
   - uid: 'visio!Visio.Interfaces.DocumentViewUpdateData:interface'
     name: Interfaces.DocumentViewUpdateData
-  - uid: 'visio!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'visio!Visio.Interfaces.DocumentViewData:interface'
     name: Visio.Interfaces.DocumentViewData
