--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.custompropertycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.custompropertycollectionloadoptions.yml
@@ -30,7 +30,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#key:member'
     summary: |-
-      对于集合中的每一项：获取自定义属性的键。 只读。
+      对于集合中的每一项：自定义属性的键。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: key
@@ -45,7 +45,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#type:member'
     summary: |-
-      对于集合中的每一项：获取自定义属性的值类型。 只读。
+      对于集合中的每一项：用于自定义属性的值的类型。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -60,7 +60,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyCollectionLoadOptions#value:member'
     summary: |-
-      对于集合中的每一项：获取或设置自定义属性的值。
+      对于集合中的每一项：自定义属性的值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
