--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.rangebordercollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.rangebordercollectionloadoptions.yml
@@ -32,7 +32,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#color:member'
     summary: |-
-      对于集合中的每一项： HTML 颜色代码，表示边框线的颜色，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
+      对于集合中的每一项： HTML 颜色代码（例如，"FFA500"）或命名的\#HTML 颜色（例如 "橙色"），表示边框线的颜色 RRGGBB （如 ""）或命名的 HTML 颜色（例如 "橙色"）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -47,7 +47,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#sideIndex:member'
     summary: |-
-      对于集合中的每一项：常量值，用于指示边框的特定侧。 有关详细信息，请参阅 BorderIndex。 只读。
+      对于集合中的每一项：常量值，用于指示边框的特定侧。 有关详细信息，请参阅 BorderIndex。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
@@ -77,7 +77,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderCollectionLoadOptions#tintAndShade:member'
     summary: |-
-      对于集合中的每一项：返回或设置一个双精度值，该值为区域边框的颜色变浅或变暗，值介于-1 （最暗）和1（最亮）之间，原始颜色为0。 空值表示边框没有统一的 tintAndShade 设置。
+      对于集合中的每一项：指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
