--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.workbookprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.workbookprotectiondata.yml
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.Interfaces.WorkbookProtectionData#protected:member'
   - uid: 'excel!Excel.Interfaces.WorkbookProtectionData#protected:member'
     summary: |-
-      指示工作簿是否受保护。 只读。
+      指定工作簿是否受保护。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protected
