--- a/docs/docs-ref-autogen/excel_1_10/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_10/toc.yml
@@ -346,7 +346,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: 应用程序
+          - name: Application
             uid: 'excel!Excel.Application:class'
           - name: AutoFilter
             uid: 'excel!Excel.AutoFilter:class'
@@ -492,14 +492,10 @@ items:
             uid: 'excel!Excel.Comment:class'
           - name: CommentCollection
             uid: 'excel!Excel.CommentCollection:class'
-          - name: CommentMention
-            uid: 'excel!Excel.CommentMention:interface'
           - name: CommentReply
             uid: 'excel!Excel.CommentReply:class'
           - name: CommentReplyCollection
             uid: 'excel!Excel.CommentReplyCollection:class'
-          - name: CommentRichContent
-            uid: 'excel!Excel.CommentRichContent:interface'
           - name: ConditionalCellValueRule
             uid: 'excel!Excel.ConditionalCellValueRule:interface'
           - name: ConditionalColorScaleCriteria
@@ -570,7 +566,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选
+          - name: 筛选器
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -938,7 +934,7 @@ items:
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -1014,7 +1010,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
