commit translated contents

--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartaxisupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartaxisupdatedata.yml
@@ -34,7 +34,7 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#baseTimeUnit:member'
     summary: |-
-      返回或设置指定分类轴的基本单位。
+      指定指定分类轴的基本单位。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: baseTimeUnit
@@ -49,7 +49,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisUpdateData#baseTimeUnit~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#categoryType:member'
     summary: |-
-      返回或设置分类轴类型。
+      指定分类轴类型。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryType
@@ -94,7 +94,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#logBase:member'
     summary: |-
-      表示使用对数刻度时对数的底数。
+      指定使用对数刻度时的对数的底数。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: logBase
@@ -124,7 +124,7 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#majorTickMark:member'
     summary: |-
-      表示特定轴的主要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
+      指定坐标轴的主要刻度线的类型。 有关详细信息，请参阅 ChartAxisTickMark。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorTickMark
@@ -139,7 +139,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisUpdateData#majorTickMark~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#majorTimeUnitScale:member'
     summary: |-
-      返回或设置当 CategoryType 属性设为 TimeScale 时分类轴的主要单位刻度值。
+      当 CategoryType 属性设置为 "时间刻度" 时，指定分类轴的主要刻度单位刻度值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorTimeUnitScale
@@ -214,7 +214,7 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#minorTickMark:member'
     summary: |-
-      表示指定轴的次要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
+      指定指定坐标轴的次要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorTickMark
@@ -229,7 +229,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisUpdateData#minorTickMark~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#minorTimeUnitScale:member'
     summary: |-
-      返回或设置当 CategoryType 属性设为 TimeScale 时分类轴的次要单位刻度值。
+      当 CategoryType 属性设置为 "时间刻度" 时，指定分类轴的次要刻度单位刻度值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorTimeUnitScale
@@ -259,7 +259,7 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#reversePlotOrder:member'
     summary: |-
-      表示 Microsoft Excel 是否按照最后一个到第一个的顺序绘制数据点。
+      指定 Excel 是否将数据点绘制为从最后一个到第一个。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: reversePlotOrder
@@ -274,7 +274,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#scaleType:member'
     summary: |-
-      表示数值轴刻度类型。 有关详细信息，请参阅 ChartAxisScaleType。
+      指定数值轴的刻度类型。 有关详细信息，请参阅 ChartAxisScaleType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scaleType
@@ -289,7 +289,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisUpdateData#scaleType~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#showDisplayUnitLabel:member'
     summary: |-
-      表示轴显示单位标签是否可见。
+      指定轴显示单位标签是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDisplayUnitLabel
@@ -304,7 +304,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#tickLabelPosition:member'
     summary: |-
-      表示特定轴上的刻度线标签位置。 有关详细信息，请参阅 ChartAxisTickLabelPosition。
+      在指定坐标轴上指定刻度线标签的位置。 有关详细信息，请参阅 ChartAxisTickLabelPosition。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickLabelPosition
@@ -319,7 +319,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisUpdateData#tickLabelPosition~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#tickLabelSpacing:member'
     summary: |-
-      表示刻度线标签之间的分类或系列数。 可以是 1 到 31999 的值或空字符串（自动设置）。 返回的值始终为数字。
+      指定分类或系列轴刻度线标签之间的数目。 可以是 1 到 31999 的值或空字符串（自动设置）。 返回的值始终为数字。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickLabelSpacing
@@ -334,7 +334,7 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#tickMarkSpacing:member'
     summary: |-
-      表示刻度线之间的分类或系列数。
+      指定分类或刻度线之间的系列数。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickMarkSpacing
@@ -364,7 +364,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#visible:member'
     summary: |-
-      该布尔值表示轴的可见性。
+      指定轴是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
