--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetcustomproperty.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetcustomproperty.yml
@@ -12,14 +12,17 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.WorksheetCustomProperty#context:member'
+      - 'excel!Excel.WorksheetCustomProperty#delete:member(1)'
       - 'excel!Excel.WorksheetCustomProperty#key:member'
       - 'excel!Excel.WorksheetCustomProperty#load:member(1)'
       - 'excel!Excel.WorksheetCustomProperty#load:member(2)'
       - 'excel!Excel.WorksheetCustomProperty#load:member(3)'
+      - 'excel!Excel.WorksheetCustomProperty#set:member(1)'
+      - 'excel!Excel.WorksheetCustomProperty#set:member(2)'
       - 'excel!Excel.WorksheetCustomProperty#toJSON:member(1)'
       - 'excel!Excel.WorksheetCustomProperty#value:member'
   - uid: 'excel!Excel.WorksheetCustomProperty#context:member'
@@ -35,9 +38,26 @@ items:
       return:
         type:
           - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.WorksheetCustomProperty#delete:member(1)'
+    summary: |-
+      删除 custom property 对象。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: delete()
+    fullName: delete()
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'delete(): void;'
+      return:
+        type:
+          - void
+        description: ''
   - uid: 'excel!Excel.WorksheetCustomProperty#key:member'
     summary: |-
-      获取 customProperty 的键。 只读。
+      获取 customProperty 的键。 自定义属性键不区分大小写。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -116,6 +136,52 @@ items:
                           select?: string;
                           expand?: string;
                       }
+  - uid: 'excel!Excel.WorksheetCustomProperty#set:member(1)'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+    remarks: |-
+      此方法具有以下附加签名：
+
+      `set(properties: Excel.WorksheetCustomProperty): void`
+    isPreview: true
+    name: 'set(properties, options)'
+    fullName: 'set(properties, options)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'set(properties: Interfaces.WorksheetCustomPropertyUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: properties
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+          type:
+            - 'excel!Excel.Interfaces.WorksheetCustomPropertyUpdateData:interface'
+        - id: options
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+          type:
+            - 'office!OfficeExtension.UpdateOptions:interface'
+  - uid: 'excel!Excel.WorksheetCustomProperty#set:member(2)'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
+    isPreview: true
+    name: set(properties)
+    fullName: set(properties)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'set(properties: Excel.WorksheetCustomProperty): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: properties
+          description: ''
+          type:
+            - 'excel!Excel.WorksheetCustomProperty:class'
   - uid: 'excel!Excel.WorksheetCustomProperty#toJSON:member(1)'
     summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 WorksheetCustomProperty 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.WorksheetCustomPropertyData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     isPreview: true
@@ -132,7 +198,7 @@ items:
         description: ''
   - uid: 'excel!Excel.WorksheetCustomProperty#value:member'
     summary: |-
-      获取自定义属性的值。 只读。
+      获取或设置自定义属性的值。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -142,12 +208,12 @@ items:
       - typeScript
     type: property
     syntax:
-      content: 'readonly value: string;'
+      content: 'value: string;'
       return:
         type:
           - string
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -155,5 +221,9 @@ references:
     name: Excel.WorksheetCustomProperty
   - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyLoadOptions:interface'
     name: Excel.Interfaces.WorksheetCustomPropertyLoadOptions
+  - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyUpdateData:interface'
+    name: Interfaces.WorksheetCustomPropertyUpdateData
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
+    name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyData:interface'
     name: Excel.Interfaces.WorksheetCustomPropertyData
