--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.textconditionalformat.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.textconditionalformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.TextConditionalFormat#context:member'
@@ -37,7 +37,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TextConditionalFormat#format:member'
     summary: |-
-      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。 只读。
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -188,7 +188,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.TextConditionalFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -221,7 +221,7 @@ items:
           - 'excel!Excel.Interfaces.TextConditionalFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -235,7 +235,7 @@ references:
     name: Excel.ConditionalTextComparisonRule
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatUpdateData:interface'
     name: Interfaces.TextConditionalFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatData:interface'
     name: Excel.Interfaces.TextConditionalFormatData
