--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.headerfooterloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.headerfooterloadoptions.yml
@@ -30,7 +30,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#centerFooter:member'
     summary: |-
-      获取或设置工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
+      工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerFooter
@@ -45,7 +45,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#centerHeader:member'
     summary: |-
-      获取或设置工作表的中心页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
+      工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerHeader
@@ -60,7 +60,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#leftFooter:member'
     summary: |-
-      获取或设置工作表的左侧页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
+      工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftFooter
@@ -75,7 +75,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#leftHeader:member'
     summary: |-
-      获取或设置工作表的左侧页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
+      工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftHeader
@@ -90,7 +90,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#rightFooter:member'
     summary: |-
-      获取或设置工作表的右侧页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
+      工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightFooter
@@ -105,7 +105,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions#rightHeader:member'
     summary: |-
-      获取或设置工作表的右侧页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
+      工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightHeader
