--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.imageloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.imageloadoptions.yml
@@ -30,7 +30,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ImageLoadOptions#format:member'
     summary: |-
-      返回图像的格式。 只读。
+      返回图像的格式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -45,7 +45,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ImageLoadOptions#id:member'
     summary: |-
-      表示图像对象的形状标识符。 只读。
+      指定 image 对象的形状标识符。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
