--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.rangeborder.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.rangeborder.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeBorder#color:member'
@@ -28,7 +28,7 @@ items:
       - 'excel!Excel.RangeBorder#weight:member'
   - uid: 'excel!Excel.RangeBorder#color:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -140,7 +140,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RangeBorder#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -161,7 +161,7 @@ items:
             - 'excel!Excel.RangeBorder:class'
   - uid: 'excel!Excel.RangeBorder#sideIndex:member'
     summary: |-
-      指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。 只读。
+      指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
@@ -216,7 +216,7 @@ items:
           ```
   - uid: 'excel!Excel.RangeBorder#tintAndShade:member'
     summary: |-
-      返回或设置一个使区域边框的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 空值表示边框没有统一的 tintAndShade 设置。
+      指定将区域边框的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示边框没有统一的 tintAndShade 设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
@@ -258,7 +258,7 @@ items:
         type:
           - 'excel!Excel.RangeBorder#weight~0:complex'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -268,7 +268,7 @@ references:
     name: Excel.Interfaces.RangeBorderLoadOptions
   - uid: 'excel!Excel.Interfaces.RangeBorderUpdateData:interface'
     name: Interfaces.RangeBorderUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.RangeBorder#sideIndex~0:complex'
     name: Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"
