--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pagebreakloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.pagebreakloadoptions.yml
@@ -26,7 +26,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PageBreakLoadOptions#columnIndex:member'
     summary: |-
-      表示分页符的列索引
+      指定分页符的列索引
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
@@ -41,7 +41,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PageBreakLoadOptions#rowIndex:member'
     summary: |-
-      表示分页符的行索引
+      指定分页符的行索引
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
