--- a/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysis.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysis.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.InkAnalysis#context:member'
@@ -180,7 +180,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'onenote!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'onenote!OneNote.InkAnalysis#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -239,7 +239,7 @@ items:
           - 'onenote!OneNote.InkAnalysis:class'
         description: ''
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.RequestContext:class'
     name: RequestContext
@@ -251,7 +251,7 @@ references:
     name: OneNote.Page
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisUpdateData:interface'
     name: Interfaces.InkAnalysisUpdateData
-  - uid: 'onenote!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisData:interface'
     name: OneNote.Interfaces.InkAnalysisData
