commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.imageloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.imageloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ImageLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="f6921-101">代表工作表中的图像。</span><span class="sxs-lookup"><span data-stu-id="f6921-101">Represents an image in the worksheet.</span></span> <span data-ttu-id="f6921-102">若要获取相应的 Shape 对象，请使用 Image. Shape。</span><span class="sxs-lookup"><span data-stu-id="f6921-102">To get the corresponding Shape object, use Image.shape.</span></span>
+      代表工作表中的图像。 若要获取相应的 Shape 对象，请使用 Image. Shape。
 
-      <span data-ttu-id="f6921-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f6921-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ImageLoadOptions
     fullName: Excel.Interfaces.ImageLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.ImageLoadOptions#id:member'
       - 'excel!Excel.Interfaces.ImageLoadOptions#shape:member'
   - uid: 'excel!Excel.Interfaces.ImageLoadOptions#$all:member'
-    summary: '<span data-ttu-id="f6921-104">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="f6921-104">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="f6921-105">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="f6921-105">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="f6921-106">).</span><span class="sxs-lookup"><span data-stu-id="f6921-106"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ImageLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="f6921-107">返回图像的格式。</span><span class="sxs-lookup"><span data-stu-id="f6921-107">Returns the format of the image.</span></span> <span data-ttu-id="f6921-108">只读。</span><span class="sxs-lookup"><span data-stu-id="f6921-108">Read-only.</span></span>
+      返回图像的格式。
 
-      <span data-ttu-id="f6921-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f6921-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ImageLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="f6921-110">表示图像对象的形状标识符。</span><span class="sxs-lookup"><span data-stu-id="f6921-110">Represents the shape identifier for the image object.</span></span> <span data-ttu-id="f6921-111">只读。</span><span class="sxs-lookup"><span data-stu-id="f6921-111">Read-only.</span></span>
+      指定 image 对象的形状标识符。
 
-      <span data-ttu-id="f6921-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f6921-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ImageLoadOptions#shape:member'
     summary: |-
-      <span data-ttu-id="f6921-113">返回与图像关联的形状对象。</span><span class="sxs-lookup"><span data-stu-id="f6921-113">Returns the Shape object associated with the image.</span></span>
+      返回与图像关联的形状对象。
 
-      <span data-ttu-id="f6921-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f6921-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shape
     fullName: shape
     langs:
