--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.charttitle.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.charttitle.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartTitle:class'
     summary: |-
-      <span data-ttu-id="8cfd3-101">表示图表的图表标题对象。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-101">Represents a chart title object of a chart.</span></span>
+      表示图表的图表标题对象。
 
-      <span data-ttu-id="8cfd3-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8cfd3-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartTitle
     fullName: Excel.ChartTitle
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartTitle#context:member'
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.ChartTitle#toJSON:member(1)'
       - 'excel!Excel.ChartTitle#visible:member'
   - uid: 'excel!Excel.ChartTitle#context:member'
-    summary: <span data-ttu-id="8cfd3-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-103">The request context associated with the object.</span></span> <span data-ttu-id="8cfd3-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -39,9 +39,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartTitle#format:member'
     summary: |-
-      <span data-ttu-id="8cfd3-105">表示图表标题的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-105">Represents the formatting of a chart title, which includes fill and font formatting.</span></span> <span data-ttu-id="8cfd3-106">只读。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-106">Read-only.</span></span>
+      表示图表标题的格式，包括填充和字体格式。
 
-      <span data-ttu-id="8cfd3-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8cfd3-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -53,7 +53,7 @@ items:
         type:
           - 'excel!Excel.ChartTitleFormat:class'
   - uid: 'excel!Excel.ChartTitle#load:member(1)'
-    summary: <span data-ttu-id="8cfd3-108">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8cfd3-109">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-109">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -67,11 +67,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="8cfd3-110">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-110">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
   - uid: 'excel!Excel.ChartTitle#load:member(2)'
-    summary: <span data-ttu-id="8cfd3-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8cfd3-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -85,7 +85,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="8cfd3-113">示例</span><span class="sxs-lookup"><span data-stu-id="8cfd3-113">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Get the text of Chart Title from Chart1.
@@ -125,11 +125,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="8cfd3-114">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-114">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartTitle#load:member(3)'
-    summary: <span data-ttu-id="8cfd3-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8cfd3-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -147,7 +147,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="8cfd3-117">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-117">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -156,9 +156,9 @@ items:
                       }
   - uid: 'excel!Excel.ChartTitle#overlay:member'
     summary: |-
-      <span data-ttu-id="8cfd3-118">表示图表标题是否将叠加在图表上的布尔值。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-118">Boolean value representing if the chart title will overlay the chart or not.</span></span>
+      指定图表标题是否将覆盖图表。
 
-      <span data-ttu-id="8cfd3-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8cfd3-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -170,9 +170,9 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ChartTitle#set:member(1)'
-    summary: '<span data-ttu-id="8cfd3-120">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-120">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="8cfd3-121">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-121">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="8cfd3-122">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="8cfd3-122">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartTitle): void`
     name: 'set(properties, options)'
@@ -188,15 +188,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="8cfd3-123">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-123">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="8cfd3-124">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-124">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartTitle#set:member(2)'
-    summary: '<span data-ttu-id="8cfd3-125">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-125">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -215,9 +215,9 @@ items:
             - 'excel!Excel.ChartTitle:class'
   - uid: 'excel!Excel.ChartTitle#text:member'
     summary: |-
-      <span data-ttu-id="8cfd3-126">表示图表的标题文本。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-126">Represents the title text of a chart.</span></span>
+      指定图表的标题文本。
 
-      <span data-ttu-id="8cfd3-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8cfd3-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -229,7 +229,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ChartTitle#toJSON:member(1)'
-    summary: '<span data-ttu-id="8cfd3-128">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="8cfd3-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="8cfd3-129">.</span><span class="sxs-lookup"><span data-stu-id="8cfd3-129"></span></span> <span data-ttu-id="8cfd3-130">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="8cfd3-130"></span></span><!-- --><span data-ttu-id="8cfd3-131">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartTitle 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartTitleData`</span><span class="sxs-lookup"><span data-stu-id="8cfd3-131">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartTitle object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartTitleData`</span></span><!-- --><span data-ttu-id="8cfd3-132">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-132">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartTitle 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartTitleData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -243,9 +243,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartTitle#visible:member'
     summary: |-
-      <span data-ttu-id="8cfd3-133">表示图表标题对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="8cfd3-133">A boolean value the represents the visibility of a chart title object.</span></span>
+      指定图表标题是否为 shape.visibile。
 
-      <span data-ttu-id="8cfd3-134">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8cfd3-134">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -257,7 +257,7 @@ items:
         type:
           - boolean
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -269,7 +269,7 @@ references:
     name: Excel.Interfaces.ChartTitleLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
     name: Interfaces.ChartTitleUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartTitleData:interface'
     name: Excel.Interfaces.ChartTitleData
