--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.documentpropertiesdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.documentpropertiesdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData:interface'
-    summary: <span data-ttu-id="bb233-101">描述通过调用返回的数据的接口`documentProperties.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="bb233-101">An interface describing the data returned by calling `documentProperties.toJSON()`</span></span><!-- --><span data-ttu-id="bb233-102">.</span><span class="sxs-lookup"><span data-stu-id="bb233-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`documentProperties.toJSON()`<!-- -->.
     name: Excel.Interfaces.DocumentPropertiesData
     fullName: Excel.Interfaces.DocumentPropertiesData
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.Interfaces.DocumentPropertiesData#title:member'
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#author:member'
     summary: |-
-      <span data-ttu-id="bb233-103">获取或设置工作簿的作者。</span><span class="sxs-lookup"><span data-stu-id="bb233-103">Gets or sets the author of the workbook.</span></span>
+      工作簿的作者。
 
-      <span data-ttu-id="bb233-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: author
     fullName: author
     langs:
@@ -38,9 +38,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#category:member'
     summary: |-
-      <span data-ttu-id="bb233-105">获取或设置工作簿的类别。</span><span class="sxs-lookup"><span data-stu-id="bb233-105">Gets or sets the category of the workbook.</span></span>
+      工作簿的类别。
 
-      <span data-ttu-id="bb233-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: category
     fullName: category
     langs:
@@ -53,9 +53,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#comments:member'
     summary: |-
-      <span data-ttu-id="bb233-107">获取或设置工作簿的注释。</span><span class="sxs-lookup"><span data-stu-id="bb233-107">Gets or sets the comments of the workbook.</span></span>
+      工作簿的注释。
 
-      <span data-ttu-id="bb233-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comments
     fullName: comments
     langs:
@@ -68,9 +68,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#company:member'
     summary: |-
-      <span data-ttu-id="bb233-109">获取或设置工作簿的公司。</span><span class="sxs-lookup"><span data-stu-id="bb233-109">Gets or sets the company of the workbook.</span></span>
+      工作簿的公司。
 
-      <span data-ttu-id="bb233-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: company
     fullName: company
     langs:
@@ -83,9 +83,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#creationDate:member'
     summary: |-
-      <span data-ttu-id="bb233-111">获取工作簿的创建日期。</span><span class="sxs-lookup"><span data-stu-id="bb233-111">Gets the creation date of the workbook.</span></span> <span data-ttu-id="bb233-112">只读。</span><span class="sxs-lookup"><span data-stu-id="bb233-112">Read only.</span></span>
+      获取工作簿的创建日期。 只读。
 
-      <span data-ttu-id="bb233-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: creationDate
     fullName: creationDate
     langs:
@@ -98,9 +98,9 @@ items:
           - '!Date:interface'
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#custom:member'
     summary: |-
-      <span data-ttu-id="bb233-114">获取工作簿的自定义属性的集合。</span><span class="sxs-lookup"><span data-stu-id="bb233-114">Gets the collection of custom properties of the workbook.</span></span> <span data-ttu-id="bb233-115">只读。</span><span class="sxs-lookup"><span data-stu-id="bb233-115">Read only.</span></span>
+      获取工作簿的自定义属性的集合。 只读。
 
-      <span data-ttu-id="bb233-116">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-116">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: custom
     fullName: custom
     langs:
@@ -113,9 +113,9 @@ items:
           - 'excel!Excel.Interfaces.DocumentPropertiesData#custom~0:complex'
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#keywords:member'
     summary: |-
-      <span data-ttu-id="bb233-117">获取或设置工作簿的关键字。</span><span class="sxs-lookup"><span data-stu-id="bb233-117">Gets or sets the keywords of the workbook.</span></span>
+      工作簿的关键字。
 
-      <span data-ttu-id="bb233-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: keywords
     fullName: keywords
     langs:
@@ -128,9 +128,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#lastAuthor:member'
     summary: |-
-      <span data-ttu-id="bb233-119">获取工作簿的最终作者。</span><span class="sxs-lookup"><span data-stu-id="bb233-119">Gets the last author of the workbook.</span></span> <span data-ttu-id="bb233-120">只读。</span><span class="sxs-lookup"><span data-stu-id="bb233-120">Read only.</span></span>
+      获取工作簿的最终作者。 只读。
 
-      <span data-ttu-id="bb233-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lastAuthor
     fullName: lastAuthor
     langs:
@@ -143,9 +143,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#manager:member'
     summary: |-
-      <span data-ttu-id="bb233-122">获取或设置工作簿的管理者。</span><span class="sxs-lookup"><span data-stu-id="bb233-122">Gets or sets the manager of the workbook.</span></span>
+      工作簿的管理者。
 
-      <span data-ttu-id="bb233-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: manager
     fullName: manager
     langs:
@@ -158,9 +158,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#revisionNumber:member'
     summary: |-
-      <span data-ttu-id="bb233-124">获取工作簿的修订号。</span><span class="sxs-lookup"><span data-stu-id="bb233-124">Gets the revision number of the workbook.</span></span> <span data-ttu-id="bb233-125">只读。</span><span class="sxs-lookup"><span data-stu-id="bb233-125">Read only.</span></span>
+      获取工作簿的修订号。 只读。
 
-      <span data-ttu-id="bb233-126">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: revisionNumber
     fullName: revisionNumber
     langs:
@@ -173,9 +173,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#subject:member'
     summary: |-
-      <span data-ttu-id="bb233-127">获取或设置工作簿的主题。</span><span class="sxs-lookup"><span data-stu-id="bb233-127">Gets or sets the subject of the workbook.</span></span>
+      工作簿的主题。
 
-      <span data-ttu-id="bb233-128">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subject
     fullName: subject
     langs:
@@ -188,9 +188,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesData#title:member'
     summary: |-
-      <span data-ttu-id="bb233-129">获取或设置工作簿的标题。</span><span class="sxs-lookup"><span data-stu-id="bb233-129">Gets or sets the title of the workbook.</span></span>
+      工作簿的标题。
 
-      <span data-ttu-id="bb233-130">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb233-130">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
