--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.rangeviewcollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.rangeviewcollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.RangeViewCollection:class'
     summary: |-
-      <span data-ttu-id="825b7-101">表示一组 RangeView 对象。</span><span class="sxs-lookup"><span data-stu-id="825b7-101">Represents a collection of RangeView objects.</span></span>
+      表示一组 RangeView 对象。
 
-      <span data-ttu-id="825b7-102">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="825b7-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RangeViewCollection
     fullName: Excel.RangeViewCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeViewCollection#context:member'
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.RangeViewCollection#load:member(3)'
       - 'excel!Excel.RangeViewCollection#toJSON:member(1)'
   - uid: 'excel!Excel.RangeViewCollection#context:member'
-    summary: <span data-ttu-id="825b7-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="825b7-103">The request context associated with the object.</span></span> <span data-ttu-id="825b7-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="825b7-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.RangeViewCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="825b7-105">获取集合中 RangeView 对象的数量。</span><span class="sxs-lookup"><span data-stu-id="825b7-105">Gets the number of RangeView objects in the collection.</span></span>
+      获取集合中 RangeView 对象的数量。
 
-      <span data-ttu-id="825b7-106">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="825b7-106">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -52,9 +52,9 @@ items:
         description: ''
   - uid: 'excel!Excel.RangeViewCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="825b7-107">通过其索引获取 RangeView 行。</span><span class="sxs-lookup"><span data-stu-id="825b7-107">Gets a RangeView Row via its index.</span></span> <span data-ttu-id="825b7-108">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="825b7-108">Zero-Indexed.</span></span>
+      通过其索引获取 RangeView 行。 从零开始编制索引。
 
-      <span data-ttu-id="825b7-109">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="825b7-109">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -68,11 +68,11 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="825b7-110">可见行的索引。</span><span class="sxs-lookup"><span data-stu-id="825b7-110">Index of the visible row.</span></span>
+          description: 可见行的索引。
           type:
             - number
   - uid: 'excel!Excel.RangeViewCollection#items:member'
-    summary: <span data-ttu-id="825b7-111">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="825b7-111">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -84,7 +84,7 @@ items:
         type:
           - 'excel!Excel.RangeViewCollection#items~0:complex'
   - uid: 'excel!Excel.RangeViewCollection#load:member(1)'
-    summary: <span data-ttu-id="825b7-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="825b7-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="825b7-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="825b7-113">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -98,11 +98,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="825b7-114">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="825b7-114">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.RangeViewCollection#load~0:complex'
   - uid: 'excel!Excel.RangeViewCollection#load:member(2)'
-    summary: <span data-ttu-id="825b7-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="825b7-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="825b7-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="825b7-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -116,11 +116,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="825b7-117">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="825b7-117">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.RangeViewCollection#load:member(3)'
-    summary: <span data-ttu-id="825b7-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="825b7-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="825b7-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="825b7-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -134,11 +134,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="825b7-120">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="825b7-120">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.RangeViewCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="825b7-121">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="825b7-121">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="825b7-122">.</span><span class="sxs-lookup"><span data-stu-id="825b7-122"></span></span> <span data-ttu-id="825b7-123">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="825b7-123"></span></span><!-- --><span data-ttu-id="825b7-124">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.RangeViewCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeViewCollectionData`</span><span class="sxs-lookup"><span data-stu-id="825b7-124">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.RangeViewCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RangeViewCollectionData`</span></span><!-- --><span data-ttu-id="825b7-125">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="825b7-125">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.RangeViewCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RangeViewCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -151,7 +151,7 @@ items:
           - 'excel!Excel.Interfaces.RangeViewCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -159,7 +159,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -189,7 +189,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionData:interface'
     name: Excel.Interfaces.RangeViewCollectionData
