--- a/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysis.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysis.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'onenote!OneNote.InkAnalysis:class'
     summary: |-
-      <span data-ttu-id="cd8ff-101">表示一组给定墨迹笔划的墨迹分析数据。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-101">Represents ink analysis data for a given set of ink strokes.</span></span>
+      表示一组给定墨迹笔划的墨迹分析数据。
 
-      <span data-ttu-id="cd8ff-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd8ff-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.InkAnalysis
     fullName: OneNote.InkAnalysis
     langs:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.InkAnalysis#context:member'
@@ -26,7 +26,7 @@ items:
       - 'onenote!OneNote.InkAnalysis#track:member(1)'
       - 'onenote!OneNote.InkAnalysis#untrack:member(1)'
   - uid: 'onenote!OneNote.InkAnalysis#context:member'
-    summary: <span data-ttu-id="cd8ff-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-103">The request context associated with the object.</span></span> <span data-ttu-id="cd8ff-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -39,9 +39,9 @@ items:
           - 'onenote!OneNote.RequestContext:class'
   - uid: 'onenote!OneNote.InkAnalysis#id:member'
     summary: |-
-      <span data-ttu-id="cd8ff-105">获取 InkAnalysis 对象的 ID。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-105">Gets the ID of the InkAnalysis object.</span></span> <span data-ttu-id="cd8ff-106">只读。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-106">Read-only.</span></span>
+      获取 InkAnalysis 对象的 ID。 只读。
 
-      <span data-ttu-id="cd8ff-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd8ff-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -53,15 +53,15 @@ items:
         type:
           - string
   - uid: 'onenote!OneNote.InkAnalysis#load:member(1)'
-    summary: <span data-ttu-id="cd8ff-108">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="cd8ff-109">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-109">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="cd8ff-110">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="cd8ff-110">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="cd8ff-111">`load(option?: string | string[]): OneNote.InkAnalysis`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-111">`load(option?: string | string[]): OneNote.InkAnalysis` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): OneNote.InkAnalysis`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="cd8ff-112">`load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysis`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-112">`load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysis` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysis`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="cd8ff-113">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysis`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-113">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysis` - Only available on collection types.</span></span> <span data-ttu-id="cd8ff-114">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-114">It is similar to the preceding signature.</span></span> <span data-ttu-id="cd8ff-115">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-115">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="cd8ff-116">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-116">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="cd8ff-117">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-117">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysis`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -79,7 +79,7 @@ items:
           type:
             - 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface'
   - uid: 'onenote!OneNote.InkAnalysis#load:member(2)'
-    summary: <span data-ttu-id="cd8ff-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="cd8ff-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -93,7 +93,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="cd8ff-120">示例</span><span class="sxs-lookup"><span data-stu-id="cd8ff-120">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           OneNote.run(function (ctx) {        
@@ -119,11 +119,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="cd8ff-121">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-121">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'onenote!OneNote.InkAnalysis#load:member(3)'
-    summary: <span data-ttu-id="cd8ff-122">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="cd8ff-123">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-123">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -137,14 +137,14 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="cd8ff-124">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-124">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'onenote!OneNote.InkAnalysis#page:member'
     summary: |-
-      <span data-ttu-id="cd8ff-125">获取父页对象。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-125">Gets the parent page object.</span></span> <span data-ttu-id="cd8ff-126">只读。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-126">Read-only.</span></span>
+      获取父页对象。 只读。
 
-      <span data-ttu-id="cd8ff-127">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd8ff-127">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: page
     fullName: page
     langs:
@@ -156,9 +156,9 @@ items:
         type:
           - 'onenote!OneNote.Page:class'
   - uid: 'onenote!OneNote.InkAnalysis#set:member(1)'
-    summary: '<span data-ttu-id="cd8ff-128">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-128">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="cd8ff-129">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-129">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="cd8ff-130">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="cd8ff-130">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: OneNote.InkAnalysis): void`
     name: 'set(properties, options)'
@@ -174,15 +174,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="cd8ff-131">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-131">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'onenote!OneNote.Interfaces.InkAnalysisUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="cd8ff-132">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-132">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'onenote!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'onenote!OneNote.InkAnalysis#set:member(2)'
-    summary: '<span data-ttu-id="cd8ff-133">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-133">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -200,7 +200,7 @@ items:
           type:
             - 'onenote!OneNote.InkAnalysis:class'
   - uid: 'onenote!OneNote.InkAnalysis#toJSON:member(1)'
-    summary: '<span data-ttu-id="cd8ff-134">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="cd8ff-134">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="cd8ff-135">.</span><span class="sxs-lookup"><span data-stu-id="cd8ff-135"></span></span> <span data-ttu-id="cd8ff-136">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="cd8ff-136"></span></span><!-- --><span data-ttu-id="cd8ff-137">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 InkAnalysis 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkAnalysisData`</span><span class="sxs-lookup"><span data-stu-id="cd8ff-137">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original OneNote.InkAnalysis object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `OneNote.Interfaces.InkAnalysisData`</span></span><!-- --><span data-ttu-id="cd8ff-138">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-138">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 InkAnalysis 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkAnalysisData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -213,7 +213,7 @@ items:
           - 'onenote!OneNote.Interfaces.InkAnalysisData:interface'
         description: ''
   - uid: 'onenote!OneNote.InkAnalysis#track:member(1)'
-    summary: '<span data-ttu-id="cd8ff-139">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-139">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="cd8ff-140">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-140">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="cd8ff-141">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-141">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
     langs:
@@ -226,7 +226,7 @@ items:
           - 'onenote!OneNote.InkAnalysis:class'
         description: ''
   - uid: 'onenote!OneNote.InkAnalysis#untrack:member(1)'
-    summary: '<span data-ttu-id="cd8ff-142">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-142">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="cd8ff-143">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-143">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="cd8ff-144">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-144">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="cd8ff-145">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="cd8ff-145">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
     langs:
@@ -239,7 +239,7 @@ items:
           - 'onenote!OneNote.InkAnalysis:class'
         description: ''
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.RequestContext:class'
     name: RequestContext
@@ -251,7 +251,7 @@ references:
     name: OneNote.Page
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisUpdateData:interface'
     name: Interfaces.InkAnalysisUpdateData
-  - uid: 'onenote!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'onenote!OneNote.Interfaces.InkAnalysisData:interface'
     name: OneNote.Interfaces.InkAnalysisData
