--- a/docs/docs-ref-autogen/onenote/onenote/onenote.inkstrokecollection.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.inkstrokecollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'onenote!OneNote.InkStrokeCollection:class'
     summary: |-
-      <span data-ttu-id="cc55d-101">表示 InkStroke 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="cc55d-101">Represents a collection of InkStroke objects.</span></span>
+      表示 InkStroke 对象的集合。
 
-      <span data-ttu-id="cc55d-102">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc55d-102">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.InkStrokeCollection
     fullName: OneNote.InkStrokeCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'onenote!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: onenote!
     children:
       - 'onenote!OneNote.InkStrokeCollection#context:member'
@@ -26,7 +26,7 @@ items:
       - 'onenote!OneNote.InkStrokeCollection#track:member(1)'
       - 'onenote!OneNote.InkStrokeCollection#untrack:member(1)'
   - uid: 'onenote!OneNote.InkStrokeCollection#context:member'
-    summary: <span data-ttu-id="cc55d-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="cc55d-103">The request context associated with the object.</span></span> <span data-ttu-id="cc55d-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="cc55d-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -39,9 +39,9 @@ items:
           - 'onenote!OneNote.RequestContext:class'
   - uid: 'onenote!OneNote.InkStrokeCollection#count:member'
     summary: |-
-      <span data-ttu-id="cc55d-105">返回页面中的 InkStrokes 数目。</span><span class="sxs-lookup"><span data-stu-id="cc55d-105">Returns the number of InkStrokes in the page.</span></span> <span data-ttu-id="cc55d-106">只读。</span><span class="sxs-lookup"><span data-stu-id="cc55d-106">Read-only.</span></span>
+      返回页面中的 InkStrokes 数目。 只读。
 
-      <span data-ttu-id="cc55d-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc55d-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -54,9 +54,9 @@ items:
           - number
   - uid: 'onenote!OneNote.InkStrokeCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="cc55d-108">按其在集合中的 ID 或索引获取 InkStroke 对象。</span><span class="sxs-lookup"><span data-stu-id="cc55d-108">Gets a InkStroke object by ID or by its index in the collection.</span></span> <span data-ttu-id="cc55d-109">只读。</span><span class="sxs-lookup"><span data-stu-id="cc55d-109">Read-only.</span></span>
+      按其在集合中的 ID 或索引获取 InkStroke 对象。 只读。
 
-      <span data-ttu-id="cc55d-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc55d-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: getItem(index)
     fullName: getItem(index)
     langs:
@@ -70,14 +70,14 @@ items:
         description: ''
       parameters:
         - id: index
-          description: '<span data-ttu-id="cc55d-111">InkStroke 对象的 ID 或集合中 InkStroke 对象的索引位置。</span><span class="sxs-lookup"><span data-stu-id="cc55d-111">The ID of the InkStroke object, or the index location of the InkStroke object in the collection.</span></span>'
+          description: InkStroke 对象的 ID 或集合中 InkStroke 对象的索引位置。
           type:
             - number | string
   - uid: 'onenote!OneNote.InkStrokeCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="cc55d-112">按其在集合中的位置获取 InkStroke。</span><span class="sxs-lookup"><span data-stu-id="cc55d-112">Gets a InkStroke on its position in the collection.</span></span>
+      按其在集合中的位置获取 InkStroke。
 
-      <span data-ttu-id="cc55d-113">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc55d-113">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -91,11 +91,11 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="cc55d-114">要检索的对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="cc55d-114">Index value of the object to be retrieved.</span></span> <span data-ttu-id="cc55d-115">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="cc55d-115">Zero-indexed.</span></span>
+          description: 要检索的对象的索引值。 从零开始编制索引。
           type:
             - number
   - uid: 'onenote!OneNote.InkStrokeCollection#items:member'
-    summary: <span data-ttu-id="cc55d-116">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="cc55d-116">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -107,15 +107,15 @@ items:
         type:
           - 'onenote!OneNote.InkStrokeCollection#items~0:complex'
   - uid: 'onenote!OneNote.InkStrokeCollection#load:member(1)'
-    summary: <span data-ttu-id="cc55d-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="cc55d-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="cc55d-118">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="cc55d-118">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="cc55d-119">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="cc55d-119">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="cc55d-120">`load(option?: string | string[]): OneNote.InkStrokeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="cc55d-120">`load(option?: string | string[]): OneNote.InkStrokeCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): OneNote.InkStrokeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="cc55d-121">`load(option?: { select?: string; expand?: string; }): OneNote.InkStrokeCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="cc55d-121">`load(option?: { select?: string; expand?: string; }): OneNote.InkStrokeCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): OneNote.InkStrokeCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="cc55d-122">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkStrokeCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="cc55d-122">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkStrokeCollection` - Only available on collection types.</span></span> <span data-ttu-id="cc55d-123">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="cc55d-123">It is similar to the preceding signature.</span></span> <span data-ttu-id="cc55d-124">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="cc55d-124">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="cc55d-125">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="cc55d-125">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="cc55d-126">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="cc55d-126">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkStrokeCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -133,7 +133,7 @@ items:
           type:
             - 'onenote!OneNote.InkStrokeCollection#load~0:complex'
   - uid: 'onenote!OneNote.InkStrokeCollection#load:member(2)'
-    summary: <span data-ttu-id="cc55d-127">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="cc55d-127">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="cc55d-128">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="cc55d-128">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -147,7 +147,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="cc55d-129">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="cc55d-129">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'onenote!OneNote.InkStrokeCollection#load:member(3)'
@@ -166,9 +166,9 @@ items:
         - id: option
           description: ''
           type:
-            - 'onenote!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'onenote!OneNote.InkStrokeCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="cc55d-130">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="cc55d-130">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="cc55d-131">.</span><span class="sxs-lookup"><span data-stu-id="cc55d-131"></span></span> <span data-ttu-id="cc55d-132">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="cc55d-132"></span></span><!-- --><span data-ttu-id="cc55d-133">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`OneNote.InkStrokeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkStrokeCollectionData`</span><span class="sxs-lookup"><span data-stu-id="cc55d-133">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `OneNote.InkStrokeCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `OneNote.Interfaces.InkStrokeCollectionData`</span></span><!-- --><span data-ttu-id="cc55d-134">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="cc55d-134">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`OneNote.InkStrokeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.InkStrokeCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -181,7 +181,7 @@ items:
           - 'onenote!OneNote.Interfaces.InkStrokeCollectionData:interface'
         description: ''
   - uid: 'onenote!OneNote.InkStrokeCollection#track:member(1)'
-    summary: '<span data-ttu-id="cc55d-135">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="cc55d-135">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="cc55d-136">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="cc55d-136">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="cc55d-137">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="cc55d-137">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
     langs:
@@ -194,7 +194,7 @@ items:
           - 'onenote!OneNote.InkStrokeCollection:class'
         description: ''
   - uid: 'onenote!OneNote.InkStrokeCollection#untrack:member(1)'
-    summary: '<span data-ttu-id="cc55d-138">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="cc55d-138">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="cc55d-139">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="cc55d-139">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="cc55d-140">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="cc55d-140">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="cc55d-141">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="cc55d-141">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
     langs:
@@ -207,7 +207,7 @@ items:
           - 'onenote!OneNote.InkStrokeCollection:class'
         description: ''
 references:
-  - uid: 'onenote!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'onenote!OneNote.RequestContext:class'
     name: RequestContext
@@ -236,7 +236,7 @@ references:
       - uid: 'onenote!OneNote.Interfaces.CollectionLoadOptions:interface'
         name: OneNote.Interfaces.CollectionLoadOptions
         fullName: OneNote.Interfaces.CollectionLoadOptions
-  - uid: 'onenote!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'onenote!OneNote.Interfaces.InkStrokeCollectionData:interface'
     name: OneNote.Interfaces.InkStrokeCollectionData
