--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.commentreplydata.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.commentreplydata.yml
@@ -14,8 +14,6 @@ items:
       - 'excel!Excel.Interfaces.CommentReplyData#content:member'
       - 'excel!Excel.Interfaces.CommentReplyData#creationDate:member'
       - 'excel!Excel.Interfaces.CommentReplyData#id:member'
-      - 'excel!Excel.Interfaces.CommentReplyData#mentions:member'
-      - 'excel!Excel.Interfaces.CommentReplyData#richContent:member'
   - uid: 'excel!Excel.Interfaces.CommentReplyData#authorEmail:member'
     summary: |-
       获取批注回复作者的电子邮件。
@@ -48,7 +46,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.CommentReplyData#content:member'
     summary: |-
-      获取或设置批注回复的内容。 字符串为纯文本。
+      批注答复的内容。 字符串为纯文本。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: content
@@ -78,7 +76,7 @@ items:
           - '!Date:interface'
   - uid: 'excel!Excel.Interfaces.CommentReplyData#id:member'
     summary: |-
-      表示批注回复标识符。 只读。
+      指定批注答复标识符。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -91,45 +89,6 @@ items:
       return:
         type:
           - string
-  - uid: 'excel!Excel.Interfaces.CommentReplyData#mentions:member'
-    summary: |-
-      获取注释中提到的实体（如人员）。
-
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: mentions
-    fullName: mentions
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'mentions?: Excel.CommentMention[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.CommentReplyData#mentions~0:complex'
-  - uid: 'excel!Excel.Interfaces.CommentReplyData#richContent:member'
-    summary: |-
-      获取丰富的注释内容（例如，注释中的提及）。 此字符串不应显示给最终用户。 您的外接程序应仅使用此信息分析丰富的注释内容。
-
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: richContent
-    fullName: richContent
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'richContent?: string;'
-      return:
-        type:
-          - string
 references:
   - uid: '!Date:interface'
     name: Date
-  - uid: 'excel!Excel.Interfaces.CommentReplyData#mentions~0:complex'
-    name: 'Excel.CommentMention[]'
-    fullName: 'Excel.CommentMention[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.CommentMention:interface'
-        name: Excel.CommentMention
-        fullName: Excel.CommentMention
-      - name: '[]'
-        fullName: '[]'
